# cross-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Package.swift  README.md
.agent/: AGENTS.md
.claude/rules/: skill-routing.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
Scripts/: build_app.sh
Sources/Trinity/: AgentHealth.swift  AgentRunner.swift  AppState.swift  ContentView.swift  GitService.swift  Models.swift  ProjectStore.swift  Prompts.swift  RunManager.swift  SelfTests.swift  Shell.swift  TrinityApp.swift  VerdictParser.swift
Tests/TrinityTests/: AgentCommandBuilderTests.swift  GitServiceTests.swift  VerdictParserTests.swift
backend/: pyproject.toml
backend/tests/: test_agents.py  test_git.py  test_health.py  test_orchestrator.py  test_server.py  test_verdict.py
backend/trinity/: __init__.py  agents.py  artifacts.py  cli.py  config.py  git.py  health.py  orchestrator.py  projects.py  prompts.py  runmanager.py  server.py  verdict.py
backend/trinity/schema/: review.schema.json
docs/specs/: 2026-06-17-trinity-orchestrator-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
