[project]
name = "trinity"
version = "0.1.0"
description = "Multi-agent orchestrator: plan -> implement -> review across claude/codex/agy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "sse-starlette>=2.1",
]

[project.scripts]
trinity = "trinity.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "anyio>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trinity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
