[package]
name = "trinity-desktop"
version = "0.1.0"
description = "Trinity multi-agent orchestrator desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "trinity_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
